--- a/css/style.css
+++ b/css/style.css
@@ -172,9 +172,12 @@
 	.totalPrice {font-size:24px;}
 
 	#exp-month {margin-right:20px;}
-  #successModal {font-size:28px; text-align:center; position:fixed; top:50%; left:50%; width:500px; padding:80px 0; margin:-250px 0 0 -250px; background-color:#fff; border:15px solid steelblue;}
-  #successModal .close-btn { width:30px; height:30px; background-color:#fff; border:2px solid #000; border-radius:50%; position:absolute; right:-20px; top:-20px; text-align:center; color:#000; line-height:25px; font-size:22px;}
-  #successModal .close-btn:hover { cursor:pointer; background-color:#ccc;}
+
+  #successModal {color:#FFF; font-size:22px; text-align:center; position:fixed; top:50%; left:50%; width:500px; padding:80px 0; margin:-250px 0 0 -250px; background-color:#2E3E58; border:2px solid #2E3E58;}
+	#successModal .modal-text {font-size:18px; font-weight:300;}
+	#successModal .modal-input {font-size:24px; font-weight:500;}
+  #successModal .close-btn { width:110px; height:40px; background-color:#007AFF; border:1px solid #2E3E58; position:absolute; right:20px; bottom:20px; text-align:center; color:#FFF; line-height:1.7em; font-size:22px;}
+  #successModal .close-btn:hover { cursor:pointer; background-color:#298FFF;}
 
   /* =================================
 	Helper Classes
